<resources>
    <string name="on_click_pref" translatable="false">onclickpref</string>
    <string name="logo_open_pref" translatable="false">logoopenpref</string>
    <string name="num_item_load_pref" translatable="false">numitemloadpref</string>
    <string name="app_reload_pref" translatable="false">appreloadpref</string>
    <string name="filter_duplicates_pref" translatable="false">filterduplicatespref</string>
    <string name="refresh_rate_pref" translatable="false">refreshrate</string>
    <string name="widget_theme_pref" translatable="false">widgetthemepref</string>
    <string name="title_font_pref" translatable="false">titlefontpref</string>
    <string name="comments_layout_pref" translatable="false">commentslayoutpref</string>
    <string name="comments_border_pref" translatable="false">commentsborderpref</string>
    <string name="title_color_pref" translatable="false">titlecolorpref</string>
    <string name="comments_first_pref" translatable="false">commentsfirstpref</string>
    <string name="comments_webview_pref" translatable="false">commentswebviewpref</string>
    <string name="comment_font_pref" translatable="false">commentfontpref</string>
    <string name="content_font_pref" translatable="false">contentfontpref</string>
    <string name="comment_editor_pref" translatable="false">commenteditorpref</string>
    <string name="preload_pref" translatable="false">preloadpref</string>
    <string name="reddit_mobile_site_pref" translatable="false">redditmobilepref</string>
    <string name="reddit_mobile_site_comments_pref" translatable="false">mobilecommentspref</string>
    <string name="background_mail_pref" translatable="false">background_mail_pref</string>
    <string name="mail_check_pref" translatable="false">mail_check_pref</string>
    <string name="reddit_content_font_pref" translatable="false">reddit_content_font_pref</string>
    <string name="app_theme_pref" translatable="false">appthemepref</string>
    <string name="back_button_pref" translatable="false">backbuttonpref</string>
    <string name="fa_search" translatable="false">{fa-search}</string>
    <string name="fa_list" translatable="false">{fa-list}</string>
    <string name="fa_plus_square" translatable="false">{fa-plus-square}</string>
    <string name="fa_trash" translatable="false">{fa-trash}</string>
    <string name="fa_filter" translatable="false">{fa-filter}</string>
    <string name="fa_pencil" translatable="false">{fa-pencil}</string>
    <string name="fa_plus" translatable="false">{fa-plus}</string>
    <string name="fa_wrench" translatable="false">{fa-wrench}</string>
    <string name="fa_refresh" translatable="false">{fa-refresh}</string>
    <string name="fa_error" translatable="false">{fa-exclamation-triangle}</string>
    <string name="fa_caret" translatable="false">{fa-caret-down}</string>
    <string name="fa_arrow_up" translatable="false">{fa-arrow-up}</string>
    <string name="fa_arrow_down" translatable="false">{fa-arrow-down}</string>
    <string name="fa_star" translatable="false">{fa_star}</string>
    <string name="fa_comment" translatable="false">{fa_comment}</string>
    <string name="fa_lock" translatable="false">{fa_lock}</string>
    <string name="fa_file_text" translatable="false">{fa_file_text}</string>
    <string name="fa_share" translatable="false">{fa-share}</string>
    <string name="fa_globe" translatable="false">{fa-globe}</string>
    <string name="fa_random" translatable="false">{fa-random}</string>
    <string name="fa_eye" translatable="false">{fa-eye}</string>
    <string name="nsfw_flag" translatable="false">[NSFW]</string>
    <string name="reddit_domain" translatable="false">reddit.com</string>
    <string name="app_name">Reddinator</string>
    <string name="loading">Loading…</string>
    <string name="loading_popular">Loading Popular…</string>
    <string name="load_more">Load more…</string>
    <string name="search">Search</string>
    <string name="configure">Configure</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="logo">logo</string>
    <string name="loading_img">loading image</string>
    <string name="img">image</string>
    <string name="loading_pop_desc">loading popular</string>
    <string name="sort_hot">Sort:  hot</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="icon">Icon</string>
    <string name="add">Add</string>
    <string name="my_subreddits">My Subreddits</string>
    <string name="sr_import">Import</string>
    <string name="username">Username</string>
    <string name="replace_current_list">Replace current list</string>
    <string name="share">Share</string>
    <string name="feed_prefs">Feed Preferences</string>
    <string name="widget_theme">Widget Theme</string>
    <string name="menu_theme_manager">Theme Manager</string>
    <string name="entries_not_empty">Entries cannot be empty!</string>
    <string name="action_settings">Settings</string>
    <string name="view_all">Add/View</string>
    <string name="preferences">Preferences</string>
    <string name="load_more_replies">Load more replies</string>
    <string name="open_link">Open Link</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="inbox">Inbox</string>
    <string name="my_reddit">My Reddit</string>
    <string name="title_activity_themes">Custom Themes</string>
    <string name="title_activity_theme_editor">Edit Theme</string>
    <string name="color_preview">Color preview</string>
    <string name="submit">Submit</string>
    <string name="display_name">Display Name</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="color_hint">Hex Color (eg. #FFFFFF)</string>
    <string name="visibility">Visibility</string>
    <string name="weighting">Weighting</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="create_a_multi">Create A Multi</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="about_open_source">Reddinator is proudly open-source software. Come and contribute on Github</string>
    <string name="about_donate">Programing is thirsty work, buy me a beer to help maintain the app.</string>
    <string name="about_r_reddinator">Stay up to date with the latest news at:\nhttps://www.reddit.com/r/reddinator/</string>
    <string name="about_beta_program">Join the beta program:\nhttps://play.google.com/apps/testing/au.com.wallaceit.reddinator</string>
    <string name="donate_paypal">Donate with Paypal</string>
    <string name="about_give_gold">If you feel my effort deserves gold</string>
    <string name="give_gold">Give Reddit Gold</string>
    <string name="about_text"><![CDATA[Reddinator is a feature packed, customisable and open-source app & widget for android. This app is a token of my appreciation for Reddit and its community, I hope you enjoy! Reddinator will always be free, but contributions using the methods below are much appreciated.]]></string>
    <string name="about_thankyou">Thanks for using Reddinator!</string>
    <string name="subreddit">Subreddit</string>
    <string name="title">Title</string>
    <string name="characters_left">%d characters left</string>
    <string name="characters_left_300">300 characters left</string>
    <string name="characters_left_100">100 characters left</string>
    <string name="text">Text</string>
    <string name="link">Link</string>
    <string name="about">About</string>
    <string name="transparency">Transparency</string>
    <string name="github">Github</string>
    <string name="select_color">Select Color</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="filter_subreddits">Filter Subreddits</string>
    <string name="filter_subreddits_select">Select subreddits to exclude</string>
    <string name="rename">Rename</string>
    <string name="saved_items">Saved Items</string>
    <string name="rate_reddinator">Rate Reddinator</string>
    <string name="nothing_more_here">There\'s nothing more here</string>
    <string name="reddit_login_failed">Login to Reddit failed:</string>
    <string name="authenticating">Authenticating</string>
    <string name="connecting_reddit_account">Connecting to your reddit account</string>
    <string name="loading_subreddits">Loading your subreddits…</string>
    <string name="loading_multis">Loading your multis…</string>
    <string name="account_sub_load_failed">Failed to load subscriptions:</string>
    <string name="account_disconnected">Account Disconnected</string>
    <string name="load_link_error">Could not load link</string>
    <string name="whoa">Whoa!</string>
    <string name="no_subreddit_error">You\'ll need to select a subreddit first</string>
    <string name="no_recipient_error">You\'ll need to provide a recipient username first</string>
    <string name="no_title_error">You\'ll need a title first</string>
    <string name="no_subject_error">You\'ll need a subject first</string>
    <string name="title_too_long_error">Such title, please reduce to 300 character or less</string>
    <string name="subject_too_long_error">Such subject, please reduce to 100 character or less</string>
    <string name="no_content_error">You\'ll need some content first</string>
    <string name="no_message_text_error">You\'ll need some message text first</string>
    <string name="sub_doesnt_look_valid">That subreddit does not look valid</string>
    <string name="submitting">Submitting…</string>
    <string name="cannot_open_post_error">Could not open submitted post:</string>
    <string name="enter_multi_name_error">Please enter a name for the multi</string>
    <string name="multi_open_error">Error opening the multi</string>
    <string name="my_multis">My Multis</string>
    <string name="sort_label">Sort:</string>
    <string name="sub_data_error">Error reading subreddit data</string>
    <string name="select_sort">Select sort</string>
    <string name="thumbnails_on_top">Thumbnails On Top</string>
    <string name="hide_post_info">Hide Post Info</string>
    <string name="close">Close</string>
    <string name="use_app_theme">Use App theme</string>
    <string name="select_widget_theme">Select Widget Theme</string>
    <string name="refreshing_subreddits">Refreshing Subreddits</string>
    <string name="one_moment">One moment…</string>
    <string name="refreshing_multis">Refreshing Multis</string>
    <string name="confirm_unsubscribe">Are you sure you want to unsubscribe from %s?</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="delete_multi">Delete Multi</string>
    <string name="delete_multi_message">Are you sure you want to delete this multi from your account?</string>
    <string name="multi_name_hint">new multi name</string>
    <string name="rename_multi">Rename Multi</string>
    <string name="subreddits">Subreddits</string>
    <string name="settings">Settings</string>
    <string name="sub_name_error">Please enter a subreddit name</string>
    <string name="subscribing">Subscribing…</string>
    <string name="unsubscribing">Unsubscribing…</string>
    <string name="copying_multi">Copying Multi…</string>
    <string name="creating_multi">Creating Multi…</string>
    <string name="updating_multi">Updating Multi…</string>
    <string name="deleting_multi">Deleting Multi…</string>
    <string name="post_options">Post Options</string>
    <string name="view_domain">View Domain</string>
    <string name="view_on_reddit">View on Reddit</string>
    <string name="subject">Subject</string>
    <string name="sidebar" translatable="false">Sidebar</string>
    <string name="browse">Browse</string>
</resources>