<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:reddinator="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sidebar"
        android:title="@string/sidebar"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_submit"
        android:title="@string/submit"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_inbox"
        android:title="@string/inbox"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_account"
        android:title="@string/my_reddit"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_feedprefs"
        android:title="@string/feed_prefs"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_thememanager"
        android:title="@string/menu_theme_manager"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_prefs"
        android:title="@string/preferences"
        android:showAsAction="never"
        reddinator:showAsAction="never"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        android:showAsAction="never" />
</menu>