<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="50dp"
	android:layout_alignParentRight="true"
	android:layout_alignParentEnd="true"
	android:orientation="horizontal"
	android:divider="?android:listDivider"
	android:showDividers="middle"
	android:descendantFocusability="blocksDescendants"
	android:baselineAligned="false">
	<LinearLayout
		android:id="@+id/multi_add_btn"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:clickable="true"
		android:focusable="true"
		android:background="?android:attr/selectableItemBackground"
		android:gravity="center_horizontal|center_vertical">
		<IconTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/add"
			android:text="@string/fa_plus_square"
			android:shadowColor="#22000000"
			android:shadowDx="4"
			android:shadowDy="4"
			android:shadowRadius="3"
			android:layout_marginRight="8dp"
			android:layout_marginEnd="8dp"
			android:textSize="28sp"
			android:textColor="#25C48F"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="22sp"
			android:text="@string/create"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/multi_browse_btn"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:clickable="true"
		android:focusable="true"
		android:background="?android:attr/selectableItemBackground"
		android:gravity="center_horizontal|center_vertical">
		<IconTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/edit"
			android:text="@string/fa_eye"
			android:shadowColor="#22000000"
			android:shadowDx="4"
			android:shadowDy="4"
			android:shadowRadius="3"
			android:layout_marginRight="8dp"
			android:layout_marginEnd="8dp"
			android:textSize="28sp"
			android:textColor="#5F99CF"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="22sp"
			android:text="@string/browse"/>
	</LinearLayout>
</LinearLayout>