<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="au.com.wallaceit.reddinator.activity.SubmitActivity">
    <Button
        android:id="@+id/submit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"/>
    <LinearLayout
        android:id="@+id/submit_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_above="@id/submit_button"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/to"
            android:hint="@string/username"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subject"
            android:hint="@string/subject"/>

        <TextView
            android:id="@+id/subject_chars_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:text="@string/characters_left_100" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:id="@+id/text"
            android:hint="@string/text" />
    </LinearLayout>

</RelativeLayout>
