<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Widgets">

			<ListPreference
                android:key="@string/on_click_pref"
                android:title="Click Action"
                android:defaultValue="1"
                android:summary="When I click on a widget post.."
                android:entries="@array/onclick_list_preference"
                android:entryValues="@array/onclick_values_list_preference"
                android:dialogTitle="When I click on a widget post.." />
            <ListPreference
                android:key="@string/refresh_rate_pref"
                android:title="Auto Refresh"
                android:defaultValue="43200000"
                android:summary="Refresh the widget feed every.."
                android:entries="@array/widget_refresh_list"
                android:entryValues="@array/widget_refresh_values"
                android:dialogTitle="Refresh the widget feed every.." />

    </PreferenceCategory>

    <PreferenceCategory android:title="Feeds">

            <CheckBoxPreference
                android:key="@string/app_reload_pref"
                android:title="App Feed Refresh"
                android:defaultValue="false"
                android:summary="Refresh the App feed when opening" />

			<ListPreference
                android:key="@string/num_item_load_pref"
                android:title="Initial Items"
                android:defaultValue="25"
                android:summary="Initially load this many items.."
                android:entries="@array/reddit_item_load"
                android:entryValues="@array/reddit_item_load"
                android:dialogTitle="Initially load this many items.." />

    </PreferenceCategory>

    <PreferenceCategory android:key="appearance" android:title="Appearance">
        <!--<ListPreference
            android:key="@string/widget_theme_pref"
            android:title="App Theme"
            android:defaultValue="1"
            android:summary="Choose the app theme"
            android:entries="@array/widget_theme_preference"
            android:entryValues="@array/widget_theme_values"
            android:dialogTitle="Choose the app theme" /> -->

        <ListPreference
            android:key="@string/app_theme_pref"
            android:title="App Theme"
            android:defaultValue="reddit_classic"
            android:summary="App &amp; default widget theme"
            android:dialogTitle="Choose the app theme" />

        <Preference
            android:title="Edit Theme"
            android:key="theme_editor_button"
            android:summary="Edit the current theme"/>

        <Preference
            android:title="Theme Manager"
            android:key="theme_manager_button"
            android:summary="Create &amp; edit custom themes"/>

        <ListPreference
            android:key="@string/title_font_pref"
            android:title="Item Title Size"
            android:defaultValue="16"
            android:summary="Font size for item titles"
            android:entries="@array/widget_fontsize_preference"
            android:entryValues="@array/widget_fontsize_preference"
            android:dialogTitle="Font size for item titles" />

        <!--<ListPreference
            android:key="@string/title_color_pref"
            android:title="Item Title Color"
            android:defaultValue="0"
            android:summary="Font color for item titles"
            android:entries="@array/widget_fontcolor_preference"
            android:entryValues="@array/widget_fontcolor_values"
            android:dialogTitle="Font color for item titles" /> -->
    </PreferenceCategory>

    <PreferenceCategory
            android:title="Reddinator View">
		<CheckBoxPreference
                android:key="@string/comments_first_pref"
                android:title="Show Comments First"
                android:defaultValue="false"
                android:summary="Show the comments page first?" />
        <CheckBoxPreference
            android:key="@string/comments_webview"
            android:title="Mobile Reddit Comments"
            android:defaultValue="false"
            android:summary="View comments at m.reddit.com" />
        <ListPreference
            android:key="@string/preload_pref"
            android:title="Preload Content"
            android:summary="Preload content that isn't shown first"
            android:entries="@array/preload_list_preference"
            android:entryValues="@array/preload_list_values"
            android:defaultValue="3"
            android:dialogTitle="Preload Content" />
        <CheckBoxPreference
            android:key="@string/back_button_pref"
            android:title="Actionbar Back Action"
            android:defaultValue="false"
            android:summaryOn="Navigate backward \n(like the in-build back button)"
            android:summaryOff="Exit to the last screen"/>
        <ListPreference
            android:key="@string/comment_font_pref"
            android:title="Comments Font Size"
            android:summary="Default font size for the comments view"
            android:entries="@array/fontsize_list_preference"
            android:entryValues="@array/fontsize_list_preference"
            android:defaultValue="18"
            android:dialogTitle="Reddit Font Size" />
		<ListPreference
            android:key="@string/content_font_pref"
            android:title="Content Font Size"
            android:summary="Default font size for the content web view"
            android:entries="@array/fontsize_list_preference"
            android:entryValues="@array/fontsize_list_preference"
            android:defaultValue="18"
            android:dialogTitle="Content Font Size" />
        <ListPreference
            android:key="@string/reddit_content_font_pref"
            android:title="Reddit Mobile Font Size"
            android:summary="Default font size for mobile reddit webviews"
            android:entries="@array/fontsize_list_preference"
            android:entryValues="@array/fontsize_list_preference"
            android:defaultValue="20"
            android:dialogTitle="Reddit Mobile Font Size" />
    </PreferenceCategory>

</PreferenceScreen>