<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#5F99CF"
    android:padding="0dp"
    android:layout_margin="0dp"
    tools:context="au.com.wallaceit.reddinator.activity.WidgetItemDialogActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/post_options"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/opt_votecontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp">

        <IconTextView
            android:id="@+id/opt_upvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/upvote"
            android:scaleType="fitCenter"
            android:text="@string/fa_arrow_up"
            android:textSize="34sp"
            android:layout_margin="4dp"
            android:focusableInTouchMode="true"
            android:clickable="true"/>

        <IconTextView
            android:id="@+id/opt_downvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/downvote"
            android:scaleType="fitCenter"
            android:text="@string/fa_arrow_down"
            android:textSize="34sp"
            android:layout_margin="4dp"
            android:focusableInTouchMode="true"
            android:clickable="true"/>
    </LinearLayout>
    <ListView
        android:id="@+id/opt_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:listSelector="#FF8B60"
        android:divider="@android:drawable/divider_horizontal_bright"/>
</LinearLayout>
