<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="50dp"
	android:layout_alignParentRight="true"
	android:layout_alignParentEnd="true"
	android:orientation="horizontal"
	android:showDividers="middle"
	android:descendantFocusability="blocksDescendants"
	android:gravity="center"
	android:baselineAligned="false">
	<IconTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/add"
		android:text="@string/fa_plus_square"
		android:shadowColor="#22000000"
		android:shadowDx="4"
		android:shadowDy="4"
		android:shadowRadius="3"
		android:layout_marginRight="8dp"
		android:layout_marginEnd="8dp"
		android:textSize="28sp"
		android:textColor="#25C48F"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:text="@string/view_all"/>
</LinearLayout>