<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp">

    <AutoCompleteTextView
        android:id="@+id/subreddit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttons"
        android:layout_alignEnd="@+id/buttons"
        android:imeOptions="actionGo"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:textSize="19sp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <IconTextView
            android:id="@+id/multi_sub_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add"
            android:text="@string/fa_plus"
            android:shadowColor="#22000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            android:textSize="32sp"
            android:textColor="#25C48F"/>

        <IconTextView
            android:id="@+id/multi_sub_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/search"
            android:text="@string/fa_search"
            android:shadowColor="#22000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:textSize="28sp"
            android:textColor="#5F99CF" />
    </LinearLayout>
</RelativeLayout>